'narrow' appar. not obsolete, rmv that label. add bolding, other small fixes. also: reorder senses (cf RFV). <straight#58793675>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -26,7 +26,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #*: “Heavens!” exclaimed Nina, “the blue-stocking and the fogy!—and yours ''are'' pale blue, Eileen!—you’re about as self-conscious as Drina—slumping there with your hair tumbling ''à la'' Mérode! Oh, it's very picturesque, of course, but a '''straight''' spine and good grooming is better.{{nb...}}”
 #* '''2011''', Adharanand Finn, ''{{w|The Guardian}}'', 22 March:
 #*: The other people, I presume, are supposed to be standing to attention, but they're all smiling at me. The lines are not even '''straight'''.
-# Of a path, trajectory, ''etc.'': [[direct]], [[undeviating]]. {{defdate|from 15<sup>th</sup>c.}}
+# {{lb|en|of a path, trajectory, etc.}} [[direct|Direct]], [[undeviating]]. {{defdate|from 15<sup>th</sup>c.}}
 #* '''1913''', {{w|John Fox, Jr.}}, ''The Kentuckians'', page 185:
 #*: Now, as the world knows, the '''straightest''' way to the heart of the honest voter is through the women of the land, and the '''straightest''' way to the heart of the women is through the children of the land; and one method of winning both, with rural politicians, is to kiss the babies wide and far.
 #* {{quote-book|en|year=2000|author=Allan Wood|title=Babe Ruth and the 1918 Red Sox|page=293|passage=He had no time to set himself, but his throw was '''straight''' and true. Pick slid in, spikes high, and Schang tagged him in the ribs a foot or two from the plate.}}
@@ -35,21 +35,28 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 # Perfectly [[horizontal]] or [[vertical]]; not diagonal or oblique. {{defdate|from 17<sup>th</sup>c.}}
 #* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
 #*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
-# {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
-# {{rfv-sense|en}} {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
-#* {{quote-book|en|year=c. 1360 |title=The Travels of Sir John Mandeville|author=Sir John Mandeville|page= |ISBN=|passage=Egypt is a long country, but it is '''straight''', that is to say, narrow.}}
-#* {{quote-book|en|year=1814 |title=The Beauties of England and Wales|author=John Britton, ‎Edward Wedlake Brayley, ‎Thomas Hood |page= |ISBN=|passage=that the old streets are unfit for the present frequency of Coaches; and that the passage of Ludgate is a throat too '''straight''' for the body.}}
-#* {{quote-book|en|year=1893  |title=The Pulpit: A Magazine of Sermons - Volume 8 |author=|page=322 |ISBN=|passage="Enter ye into the '''straight''' gate; for wide is the gate and broad is the way that leadeth unto destruction, and many go in thereat; because '''straight''' is the gate and narrow is the way that leadeth unto life, and few there be that find it."}}
-#* {{quote-book|en|year=1894 |title=American Anthropologist |author=|page=153 |ISBN=|passage=Family or Gentile expansion: “Behold now the place where we dwell with thee is too '''straight''' for us.” }}
-#* {{quote-book|en|year=2013 |title=Purposes of the Cross|author=Dr. Apostle Emmanuel Adebiyi |page= |ISBN=|passage=One is a wide gate and broad way seeker, while the other is the '''straight''' gate and narrow way seeker.}}
+# {{lb|en|cricket}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2011''' March 15, Alan Gardner & Barney Ronay, ''{{w|The Guardian}}'':
+#*: Steyn continues and it's all a bit more orderly down his end as O'Brien defends the first three balls with a '''straight''' bat and a respectful dip of the head.
+# [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
+#*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
 # Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
 #* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
 #*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
 #* '''2010''' August 4, {{w|The Guardian}}, ''Out of prison and trying to go straight'' [https://www.theguardian.com/society/2010/aug/04/prisoner-going-straight-drugs-crime]:
 #*: How easy is it to go straight after a life spent in and out of prison?
-# [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
-#* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
-#*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
+# [[serious|Serious]] rather than [[comedic]].
+#* '''1988''', Ed Gould, ''Entertaining Canadians: Canada's international stars, 1900-1988'', Cappis Pr Pub Ltd ({{ISBN|9780919763180}}):
+#*: Allan Blye, a CBC-TV mainstay in the early Sixties, worked as a singer, writer and '''straight''' and comedic actor.
+#* '''2004''', Tammy Ravas, ''Peter Schickele: A Bio-bibliography'', Greenwood Publishing Group ({{ISBN|9780313320705}}):
+#*: All of Peter Schickele's music, both '''straight''' and comedic are integrated side by side in this chapter.
+#* '''2005''', Bob McCabe, ''The Rough Guide to Comedy Movies'', Rough Guides Limited:
+#*: More success followed, both '''straight''' and comedic, with hits such as ''Dead Poets' Society'' (1989), in which Williams scored another Oscar nomination for skilfully handling a classic &quot;rogue teacher&quot; role that hovers just this side of sentimentality,{{...}}
+# In proper order; as it should be. {{defdate|from 19<sup>th</sup>c.}}
+#* {{quote-book|en|year=2007|author=Grant Allen|title=What's Bred in the Bone|page=140|passage=Oh, music, how he loved it; it seemed to set everything '''straight''' all at once in his head.}}
+#* '''2010''', Paul Gallagher, ''{{w|The Observer}}'', 15 August:
+#*: "If you wonder why folks can't take the news seriously, here's Exhibit A," said one blogger. "Lord Jesus, how can the reporter file this story with a '''straight''' face?"
 # In a row, in unbroken [[sequence]]; consecutive. {{defdate|from 19<sup>th</sup>c.}}
 #: {{ux|en|After four '''straight''' wins, Mudchester United are top of the league.}}
 #* {{quote-journal|en|date=September 24, 2011|author=David Ornstein|work=BBC Sport
@@ -57,17 +64,6 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 |passage=It moves them from 17th to 12th on seven points, while Bolton are now bottom of the table with five '''straight''' defeats.}}
 #* '''2008''', "Bad vibrations", ''{{w|The Economist}}'', 30 October:
 #*: As of October 29th, three-month dollar Libor (the rate at which banks borrow from each other) had fallen for 13 '''straight''' days and was nearly one-and-a-half percentage points below its October 10th level.
-# In proper order; as it should be. {{defdate|from 19<sup>th</sup>c.}}
-#* {{quote-book|en|year=2007|author=Grant Allen|title=What's Bred in the Bone|page=140|passage=Oh, music, how he loved it; it seemed to set everything '''straight''' all at once in his head.}}
-#* '''2010''', Paul Gallagher, ''{{w|The Observer}}'', 15 August:
-#*: "If you wonder why folks can't take the news seriously, here's Exhibit A," said one blogger. "Lord Jesus, how can the reporter file this story with a '''straight''' face?"
-# Of [[spirit]]s: [[undiluted]], [[unmixed]]; [[neat]]. {{defdate|from 19<sup>th</sup>c.}}
-#* '''2003''', Ron Jordan, ''Considerations'':
-#*: Real cowboys know how to rope, ride a horse and drink whisky '''straight'''.
-#* {{quote-book|en|year=2003|author=Lowell Edmunds|title=Martini, Straight Up|page=94|passage=The Martini is still in ''belief'', if not in fact, the centerpiece of a rite, and people who would not drink '''straight''' gin on the rocks will drink '''straight''' gin on the rocks if it is called a Martini.}}
-# {{lb|en|cricket}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19<sup>th</sup>c.}}
-#* '''2011''' March 15, Alan Gardner & Barney Ronay, ''{{w|The Guardian}}'':
-#*: Steyn continues and it's all a bit more orderly down his end as O'Brien defends the first three balls with a '''straight''' bat and a respectful dip of the head.
 # {{lb|en|tennis}} Describing the [[set]]s in a [[match]] of which the winner did not lose a single set. {{defdate|from 19<sup>th</sup>c.}}
 #* '''2011''' February 10, Press Association:
 #*: Murray started well against Marcos Baghdatis before slumping to defeat in '''straight''' sets and the British No1 admitted he may not have been mentally prepared for the rigours of the ATP Tour after a gruelling start to 2011.
@@ -82,15 +78,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 |title=Do You Remember the First Time?|album=His ‘n’ Hers||passage=You say you've got to go home / Well at least there's someone there that you can talk to / And you never have to face up to the night on your own / Jesus, it must be great to be '''straight'''}}
 #* '''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
 #*: ‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
-#* {{quote-book|en|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
-# {{lb|en|fashion}} Not [[plus size]]; [[thin]].
-#: {{ux|en|the shirts only come in '''straight''' sizes, not in plus sizes}}
-#: {{ux|en|shopping at a '''straight'''-sized store}}
-# {{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
-#: {{syn|en|straightedge}}
-#* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
-#*: For all the boredom the '''straight''' life brings, it's not too bad.
-#* {{quote-book|en|year=2001|author=Ruella Frank|title=Body of Evidence|page=28|passage=‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’}}
+#* {{quote-book|en|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a '''straight''' guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
 # {{lb|en|colloquial}} [[heterosexual|Heterosexual]].
 #* {{quote-book|en|author=Laura Harris|author2=Elizabeth Crocker|title=Femme: Feminists, Lesbians, and Bad Girls|location=New York, N.Y.|publisher={{w|Routledge}}|year=1997|page=196|isbn=978-0-415-91874-9|passage=We only appear '''straight''' for the first five seconds. Just walking down the street, in the diner, or at the boardwalk, we hear, "Is she a man? Is she a woman? If she is a '''straight''' woman, what is she doing with this gay man?" We check in with each other. "What do you think, is it okay? I think we should go. I think we should cross over to the other side. Danger."}}
 #* {{quote-book|en|author=Helen Boyd|title=My Husband Betty: Love, Sex, and Life with a Crossdresser|location=New York, N.Y.|publisher=[[w:Perseus Books Group|Thunder's Mouth Press]]|year=2003|page=187|isbn=978-1-56025-515-4|passage=["]{{...}}He's a '''straight''' guy who does drag." At that, the man laughed. "Oh, you're putting me on!" He decided I must have been pulling his leg the whole time. He glanced back at my husband again. "So what's his number?" "The same as mine."}}
@@ -98,18 +86,30 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #*: Some of my friends – gay and '''straight''' – seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 #* {{quote-book|en|year=2011|author=Jodi Picoult|title=Sing You Home|page=273|passage=Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’}}
 #* {{quote-book|en|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
-#* {{quote-book|en|author=Katie Price|authorlink=Katie Price|title=He's the One| location=London| publisher=[[w:Random House|Century]]| year=2013| page=233| isbn=978-1-84605-959-9| passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's straight, but there's always hope.}}
-# {{label|en|science|mathematics}} concerning the property allowing the [[parallel-transport]] of [[vector]]s along a course that keeps [[tangent]] vectors remain tangent vectors throughout that course {{gloss|a course which is straight, a [[straight curve]], is a [[geodesic]]}}
+#* {{quote-book|en|author=Katie Price|authorlink=Katie Price|title=He's the One| location=London| publisher=[[w:Random House|Century]]| year=2013| page=233| isbn=978-1-84605-959-9| passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's '''straight''', but there's always hope.}}
+# {{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
+#: {{syn|en|straightedge}}
+#* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
+#*: For all the boredom the '''straight''' life brings, it's not too bad.
+#* {{quote-book|en|year=2001|author=Ruella Frank|title=Body of Evidence|page=28|passage=‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’}}
+# {{lb|en|fashion}} Not [[plus size]]; [[thin]].
+#: {{ux|en|the shirts only come in '''straight''' sizes, not in plus sizes}}
+#: {{ux|en|shopping at a '''straight'''-sized store}}
+# {{rfv-sense|en}} {{lb|en|rare}} [[strait|Strait]]; [[narrow]].
+#* {{quote-book|en|year=c. 1360 |title=The Travels of Sir John Mandeville|author=Sir John Mandeville|page= |ISBN=|passage=Egypt is a long country, but it is '''straight''', that is to say, narrow.}}
+#* {{quote-book|en|year=1814 |title=The Beauties of England and Wales|author=John Britton, ‎Edward Wedlake Brayley, ‎Thomas Hood |page= |ISBN=|passage=that the old streets are unfit for the present frequency of Coaches; and that the passage of Ludgate is a throat too '''straight''' for the body.}}
+#* {{quote-book|en|year=1893  |title=The Pulpit: A Magazine of Sermons - Volume 8 |author=|page=322 |ISBN=|passage="Enter ye into the '''straight''' gate; for wide is the gate and broad is the way that leadeth unto destruction, and many go in thereat; because '''straight''' is the gate and narrow is the way that leadeth unto life, and few there be that find it."}}
+#* {{quote-book|en|year=1894 |title=American Anthropologist |author=|page=153 |ISBN=|passage=Family or Gentile expansion: “Behold now the place where we dwell with thee is too '''straight''' for us.” }}
+#* {{quote-book|en|year=2013 |title=Purposes of the Cross|author=Dr. Apostle Emmanuel Adebiyi |page= |ISBN=|passage=One is a wide gate and broad way seeker, while the other is the '''straight''' gate and narrow way seeker.}}
+# {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
 # {{lb|en|slang}} Thorough; utter; [[unqualified]].
 #* '''2012''', Pimpin' Ken, ''PIMPOLOGY: The 48 Laws of the Game'', page 11:
 #*: A real pimp is a gentleman, but these are pimps in gorilla suits. They hang around pimps, they have hoes on the track working for them, they may even look like pimps, but they are '''straight''' simps.
-# [[serious|Serious]] rather than [[comedic]].
-#* '''1988''', Ed Gould, ''Entertaining Canadians: Canada's international stars, 1900-1988'', Cappis Pr Pub Ltd ({{ISBN|9780919763180}}):
-#*: Allan Blye, a CBC-TV mainstay in the early Sixties, worked as a singer, writer and '''straight''' and comedic actor.
-#* '''2004''', Tammy Ravas, ''Peter Schickele: A Bio-bibliography'', Greenwood Publishing Group ({{ISBN|9780313320705}}):
-#*: All of Peter Schickele's music, both '''straight''' and comedic are integrated side by side in this chapter.
-#* '''2005''', Bob McCabe, ''The Rough Guide to Comedy Movies'', Rough Guides Limited:
-#*: More success followed, both '''straight''' and comedic, with hits such as ''Dead Poets' Society'' (1989), in which Williams scored another Oscar nomination for skilfully handling a classic &quot;rogue teacher&quot; role that hovers just this side of sentimentality,{{...}}
+# Of [[spirit]]s: [[undiluted]], [[unmixed]]; [[neat]]. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2003''', Ron Jordan, ''Considerations'':
+#*: Real cowboys know how to rope, ride a horse and drink whisky '''straight'''.
+#* {{quote-book|en|year=2003|author=Lowell Edmunds|title=Martini, Straight Up|page=94|passage=The Martini is still in ''belief'', if not in fact, the centerpiece of a rite, and people who would not drink '''straight''' gin on the rocks will drink '''straight''' gin on the rocks if it is called a Martini.}}
+# {{label|en|science|mathematics}} Concerning the property allowing the [[parallel-transport]] of [[vector]]s along a course that keeps [[tangent]] vectors remain tangent vectors throughout that course {{gloss|a course which is straight, a [[straight curve]], is a [[geodesic]]}}.
 
 ====Antonyms====
 * {{l|en|bent}}
