--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -33,6 +33,8 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #* {{quote-journal|en|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
 |title=Travels and travails|url=http://www.economist.com/news/international/21580191-edward-snowdens-odyssey-leaves-america-nonplussed-and-its-allies-dismayed-russia-china|passage=Even without hovering drones, a lurking assassin, a thumping score and a denouement, the real-life story of Edward Snowden, a rogue spy on the run, could be '''straight''' out of the cinema. But, as with Hollywood, the subplots and exotic locations may distract from the real message: America’s discomfort and its foes’ glee.}}
 # Perfectly [[horizontal]] or [[vertical]]; not diagonal or oblique. {{defdate|from 17<sup>th</sup>c.}}
+#* '''1925''', United States House Committee on the Judiciary, Subcommittee No. 1, ''Charges Against William E. Baker, U.S. District Judge'': 
+#*: Mr. Coniff: He did not have his hat on '''straight'''; that is the one thing, is it?
 #* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
 #*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
 # {{lb|en|cricket}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19<sup>th</sup>c.}}
