// Edit via Wikiplus <愣#58801587>

--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -10,7 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=楞}}
 
 ===Glyph origin===
 {{Han compound|ls=psc|心|楞|c1=s|c2=p|abb2=y|no_och2=y}}.
@@ -20,7 +20,7 @@
 |m=lèng
 |c=ling6,ling4
 |mn=ml:lēng/tw:gāng
-|mn_note=gāng - 卬,顒 is used in the Mainland
+|mn_note=gāng - {{zh-l|*卬}}, {{zh-l|*顒}} is used in the Mainland
 |ma=y
 |cat=
 }}
