--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -47,8 +47,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 #: {{ux|en|Sorry, I don't '''speak''' idiot.}}
 #: {{ux|en|So you can program in C. But do you '''speak''' C++?}}
 # {{lb|en|intransitive}} To produce a sound; to [[sound]].
-#* {{rfdatek|en|Shakespeare}}
-#*: Make all our trumpets '''speak'''.
+#* {{RQ:Shakespeare Macbeth|V|vi|passage=Make all our trumpets '''speak'''.}}
 # {{lb|en|transitive|archaic}} To address; to accost; to speak to.
 #* Bible, Ecclus. xiii. 6
 #*: [He will] thee in hope; he will '''speak''' thee fair.
