--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -92,6 +92,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |footbridge
 |Gorebridge
 |Hebden Bridge
+|Horns Bridge
 |Hubberts Bridge
 |humpback bridge
 |ice bridge
