--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -227,6 +227,9 @@ From {{der|da|de|Stab}}.
 
 ==Lushootseed==
 
+===Etymology===
+{{der|lut|sal-pro|*s-tam}}, from {{affix|sal-pro|*s-|*tam|t2=thing; what}}
+
 ===Determiner===
 {{head|lut|determiner}}
 
