--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -28,14 +28,16 @@
 |ma=y
 |c=ting4
 |c-t=
-|g=
-|h=pfs=thìn
-|j=
-|mb=
+|g=tin2
+|h=pfs=thìn;gd=tin2
+|j=ti1/ting1/ting3
+|j_note=ti1 - vernacular; ting1 - literary
+|mb=hâing/děng
+|mb_note=hâing - vernacular; děng - literary
 |mn=thêng
 |mn-t=têng5
 |w=3din
-|x=
+|x=din2
 |mc=y
 |oc=y
 |cat=v
