--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -33,6 +33,7 @@
 |j=ti1/ting1/ting3
 |j_note=ti1 - vernacular; ting1 - literary
 |mb=děng/déng
+|mb_note=déng - in certain compounds, e.g. {{zh-l|停屍}}, {{zh-l|停棺}}
 |md=dìng
 |mn=thêng
 |mn-t=têng5
