--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -24,8 +24,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 #* {{rfdatek|en|Prescott}}
 #*: The '''thunders''' of the Vatican could no longer strike into the heart of princes.
 # {{lb|en|obsolete}} The [[discharge]] of [[electricity]]; a [[thunderbolt]].
-#* {{rfdatek|en|Shakespeare}}
-#*: The revenging gods / 'Gainst parricides did all their '''thunders''' bend.
+#* {{RQ:Shakespeare Lear|II|i|passage=The revenging gods / 'Gainst parricides did all their '''thunders''' bend.}}
 # {{lb|en|figuratively}} The [[spotlight]].
 #: Shortly after I announced my pregnancy, he stole my '''''thunder''''' with his news of landing his dream job.
 
