--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -119,6 +119,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 {{trans-bottom}}
 
 {{trans-top|to cause something to be suspended in a liquid of greater density}}
+* Finnish: {{t|fi|kelluttaa}}
 * Hungarian: {{t|hu|úsztat}}, {{t|hu|[[felszín]]en [[tart]]}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -163,6 +164,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 {{trans-bottom}}
 
 {{trans-top|to drift aimlessly}}
+* Finnish: {{t|fi|ajelehtia}}, {{t+|fi|lipua}}, {{t+|fi|ujua}}
 * Maori: {{t|mi|whakatairangi}}
 {{trans-mid}}
 * Serbo-Croatian: {{t+|sh|muvati se}}, {{t+|sh|tumarati}}, {{t|sh|besciljno se kretati}}, {{t+|sh|motati se}}
@@ -215,6 +217,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 {{trans-top|to automatically adjust a parameter as related parameters change}}
 * Dutch: {{t+|nl|vloeien}}
 {{trans-mid}}
+* Finnish: {{t+|fi|vaihtua}}, {{t+|fi|riippua}}
 {{trans-bottom}}
 
 {{trans-top|to allow a price to be determined by the markets as opposed to by rule}}
@@ -228,12 +231,14 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 {{trans-bottom}}
 
 {{trans-top|to extend a short-term loan to}}
+* Finnish: {{t|fi|vipata}}
 * German: {{t+|de|borgen}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|kölcsönad}}
 {{trans-bottom}}
 
 {{trans-top|to issue or sell shares in a company (or units in a trust) to members of the public, followed by listing on a stock exchange}}
+* Finnish: {{t|fi|[[aloittaa]] [[osakeanti]]}}
 * Hungarian: {{t+|hu|kibocsát}}, {{t|hu|forgalomba hoz}}
 {{trans-mid}}
 {{trans-bottom}}
