--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -41,7 +41,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 |url=http://www.americanscientist.org/issues/pub/rereading-darwin
 |passage=We live our lives in three dimensions for our threescore and ten allotted years. Yet every '''branch''' of contemporary science, from statistics to cosmology, alludes to processes that operate on scales outside of human experience: the millisecond and the nanometer, the eon and the light-year.}}
 # {{lb|en|nautical}} A [[certificate]] given by {{w|Trinity House}} to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s.
-# {{lb|en|computer architecture}} A sequence of {{l|en|code}} that is conditionally {{l|en|executed}}.
+# {{lb|en|computing}} A sequence of {{l|en|code}} that is conditionally {{l|en|executed}}.
 # {{lb|en|computing}} A group of related [[file]]s in a [[source control]] [[system]], including for example [[source code]], [[build]] [[script]]s, and [[media]] such as [[image]]s.
 # {{lb|en|rail transport}} A [[branch line]].
 
