--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -77,15 +77,14 @@
 ----
 
 ==Japanese==
-{{ja-see-also|-坊}}
 
 ===Kanji===
 {{ja-kanji|grade=c|rs=土04}}
 
-# Monk's residence
-# Monk
-# Boy, "sonny"
-# City precinct
+# a monk's residence
+# monk
+# boy, "sonny"
+# precinct of a city
 
 ====Readings====
 {{ja-readings
