--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -48,7 +48,7 @@
 # [[foolish]]; [[stupid]]
 # to [[fool]]; to [[dupe]]
 # {{lb|zh|humble}} [[I]]
-#* {{zh-x|^@孟嘗君 曰：「愚 不知 所 謂 也。」|Lord Mengchang said, "'''I''' don't understand what it means."|ref=Shiji}}
+#* {{zh-x|^孟-嘗 ^君 曰：「愚 不知 所 謂 也。」|Lord Mengchang said, "'''I''' don't understand what it means."|ref=Shiji}}
 #* {{zh-x|愚 以為 宮中 之 事，事無大小，悉 以 咨 之，然後 施行……|'''I''' think they should be consulted on all court affairs, regardless of their sizes, before the court affairs are being put to execution.|CL|ref={{w2|zh|諸葛亮}}, {{lang|zh|《出師表》}}}}
 
 ===Compounds===
