--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -367,6 +367,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 
 =====Descendants=====
 * {{desc|ja|ファイト|tr=faito|bor=1}}
+* {{desctree|srn|feti}}
 
 =====Translations=====
 {{trans-top|occasion of fighting}}
