--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -403,7 +403,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Danish: {{t+|da|komme}}, {{t|da|ejakulere}}
 * Dutch: {{t+|nl|klaarkomen}}
 * Esperanto: {{t+|eo|ĉuri}}
-* Finnish: {{t+|fi|tulla}}, {{t|fi|saada orgasmi}}, {{t+|fi|laueta}}
+* Finnish: {{t+|fi|tulla}}, {{t|fi|[[saada]] [[orgasmi]]}}, {{t+|fi|laueta}}
 * French: {{t+|fr|jouir}}, {{t+|fr|venir}}
 * German: {{t+|de|kommen}}
 * Greek: {{t+|el|χύνω}} {{qualifier|slang}}
