--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -18,7 +18,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=𬽥-second round simplified}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -32,8 +32,13 @@
 ===Pronunciation 1===
 {{zh-pron
 |m=jiǎ
+|m-s=
 |c=gaa2
+|c-t=
+|g=
 |h=pfs=ká
+|j=
+|mb=
 |md=gā
 |mn=xm,qz,tw:ké/zz:kée/ká
 |mn_note=ké/kée - vernacular; ká - literary
@@ -41,6 +46,7 @@
 |mn-t_note=gê2 - vernacular; gia2 - literary
 |w=2ka,2jia
 |w_note=2ka - vernacular; 2jia - literary
+|x=
 |dial=n
 |mc=1
 |oc=1+2,1
@@ -72,14 +78,20 @@
 ===Pronunciation 2===
 {{zh-pron
 |m=jià
+|m-s=
 |c=gaa3
+|c-t=
+|g=
 |h=pfs=ká/ka
+|j=
+|mb=
 |md=gá
 |mn=xm,qz:kè/zz:kèe/xm,qz,tw:kà
 |mn_note=Xiamen, Quanzhou, Taiwan: kè - vernacular; kà - literary
 |mn-t=gê3/gian2
 |mn-t_note=gê3 - vernacular; gian2 - literary
 |w=2ka
+|x=
 |mc=2
 |oc=n,2
 |cat=n
