--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -65,7 +65,7 @@
 #: {{zh-x|偶爾|occasionally}}
 #: {{zh-x|偶然|occasionally, accidentally}}
 ===Compounds===
-{{zh-der|偶然論|喪偶|佳偶天成|偶影|匹偶|偶數|偶成|偶得|偶人|偶爾|偶感|偶然性|偶語|偶而|偶蹄目|偶合|偶作|偶句對|偶視|怨偶|仇偶|分隸偶存|不偶|偶拾|土偶桃梗|奇偶|力偶|布偶|偶鰭|偶戲人|偶像|對偶|不偶世|偶一為之|土木偶人|大玩偶|偶書|土偶|偶族|嘉偶天成|偶戲|偶方|偶發|佳偶|偶然|偶函數|偶或|偶性|未偶|杖頭木偶|百年佳偶|木偶影片|無獨有偶|玩偶|木偶|提偶|排偶|擇偶|相人偶|熱電偶|木偶人|求偶|流落不偶|木偶戲|提線木偶|齊大非偶|鬱堙不偶|陶偶|鐵線木偶|配偶家族|配偶}}
+{{zh-der|偶然論|喪偶|佳偶天成|偶影|匹偶|偶數|偶成|偶得|偶人|偶爾|偶感|偶然性|偶語|偶而|偶蹄目|偶合|偶作|偶句對|偶視|怨偶|仇偶|分隸偶存|不偶|偶拾|土偶桃梗|奇偶|力偶|布偶|偶鰭|偶戲人|偶像|對偶|不偶世|偶一為之|土木偶人|大玩偶|偶書|土偶|偶族|嘉偶天成|偶戲|偶方|偶發|佳偶|偶然|偶函數|偶或|偶性|未偶|杖頭木偶|百年佳偶|木偶影片|無獨有偶|玩偶|木偶|提偶|排偶|擇偶|相人偶|熱電偶|木偶人|求偶|流落不偶|木偶戲|提線木偶|齊大非偶|鬱堙不偶|陶偶|鐵線木偶|配偶家族|配偶|奇偶性}}
 ----
 
 ==Japanese==
