--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -27,7 +27,8 @@ Cognate with {{cog|cdm|दारःदो|tr=darʔ.do|t=place of sunrise; in eas
 ====Pronunciation====
 {{zh-pron
 |m=dàn
-|c=daan3-2,daan3
+|c=daan3,daan3-2
+|c=daan3-2 ("female role in Chinese opera")
 |h=pfs=
 |md=
 |mn=tòaⁿ/tàn
