--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -5,7 +5,7 @@
 * {{rhymes|en|ɛlt}}
 
 ===Etymology 1===
-{{suffix|en|learn|t}}. See {{m|en|spell}}.
+{{suffix|en|spell|t}}. See {{m|en|spell}}.
 
 ====Alternative forms====
 * {{l|en|spelled}}
