--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -300,6 +300,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Novial: {{t|nov|butre}}
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
 * Old Church Slavonic: {{t|cu|масло|n|sc=Cyrs}}
+* Old East Slavic: {{t|orv|масло|n}}
 * Old English: {{t|ang|butere|f}}
 * Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нӕлхӕ}}
