--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -91,6 +91,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Dunbridge
 |footbridge
 |Gorebridge
+|Guide Bridge
 |Hebden Bridge
 |Horns Bridge
 |Hubberts Bridge
