--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -23,15 +23,21 @@ Pictogram ([[象形]]) – pictographic representation of an umbrella
 ===Pronunciation===
 {{zh-pron
 |m=sǎn
+|m-s=
 |ma=
 |dg=сан2
 |c=saan3
+|c-t=
+|g=san3
 |h=pfs=sán
+|j=san2
+|mb=sǔing
 |md=sāng
 |mn=sòaⁿ/sàn
 |mn_note=sòaⁿ - vernacular; sàn - literary
 |mn-t=suan3
 |w=2se
+|x=san3
 |mc=y
 |oc=y
 |cat=n,a
