--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -8,6 +8,7 @@ From {{inh|he|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}} and {{cog|arc
 * {{a|IL}} {{IPA|he|/ˈeʁet͡s/}}
 * {{a|Yemenite Hebrew}} {{IPA|he|/ˈʔæræsˤ/}}
 * {{a|Tiberian}} {{IPA|he|/ˈʔɛʀɛsˤ/}}
+* {{a|Biblical Hebrew}} {{IPA|he|/ˈʔeresˤ/}}
 
 ===Noun===
 {{he-noun|g=f|tr='éretz|wv=אֶרֶץ|pl=אֲרָצוֹת|cons=אֶרֶץ|plcons=אַרְצוֹת|pausal=אָרֶץ|pat=קֶטֶל}}
