--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -105,6 +105,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |low bridge
 |Malin Bridge
 |Maryland bridge
+|Newby Bridge
 |Norton Bridge
 |[[Roybridge]], [[Roy Bridge]]
 |Schering bridge
