--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -75,6 +75,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Bailey bridge
 |bridge loan
 |bridge mount
+|Bridge of Dun
 |Bridge of Earn
 |Bridge of Orchy
 |Bridge of Weir
