--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -87,6 +87,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Azerbaijani: {{t|az|göy gurultusu}}, {{t+|az|ildırım}}
 * Belarusian: {{t|be|гром|m}}
 * Bengali: {{t|bn|বজ্রধ্বনি}}
+* Bikol Central: {{t|bcl|dalugdog}} {{t+|bcl|daguldol}}
 * Brunei Malay: {{t|kxd|guruh}}
 * Bulgarian: {{t+|bg|гръм|m}}
 * Burmese: {{t+|my|မိုးကြိုး}}
