--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -4,6 +4,10 @@
 ===Etymology===
 {{affix|en|ham|string|id1=anatomy|gloss1=region back of the knee joint}}
 
+===Pronunciation===
+{{rfp|en}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-hamstring.wav ‎|Audio (UK)}}
+
 ===Noun===
 {{en-noun}}
 
