--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -55,7 +55,7 @@
 * {{q|Classical}} {{zh-l|止}}
 
 ===Compounds===
-{{zh-der|停航|不停住|久停久住|停車費|停留長智|停役|停頭|停擺|停辦|停泊|五停心觀|停戰協定|停放|停停當當|停火|停筆|停課|停車|停滯|勻停|停分|停妻再娶|停步|停經|停產|停徵|停雲落月|停喪|居停主人|停勻|停靠|停機坪|下停|不停|停床|停妥|停車位|停當|停駛|少停|停水|停停脫脫|勒停|悠停|停歇|停刊|停用|停駐|停話|停靈|二停|居停|居中調停|三停|幹的停當|三停刀|停睇|停表|停車場|停雲慢步|停杯|停息|停學|停一停|停業|停留|不停當|停屍|停滯不前|停俸|停食|停柩|一停兒|停閑|停格|停工|停職|停雲|停潦|叫停|停頓|停版|停辛佇苦|停屍間|停電|四停八當|停閉|停訊|停罷|停眠整宿|停止|停戰|停待|停停|停住|停驂|留職停薪|晝夜停勻|手不停揮|窩停主人|放停|漲停|漲停板|消停|槃停|暫停|片刻不停|跌停板|調停|調停人|胸部停球|鸞停鵠峙|馬不停蹄|門不停賓|鸞鵠停峙}}
+{{zh-der|停航|不停住|久停久住|停車費|停留長智|停役|停頭|停擺|停辦|停泊|五停心觀|停戰協定|停放|停停當當|停火|停筆|停課|停車|停滯|勻停|停分|停妻再娶|停步|停經|停產|停徵|停雲落月|停喪|居停主人|停勻|停靠|停機坪|下停|不停|停床|停妥|停車位|停當|停駛|少停|停水|停停脫脫|勒停|悠停|停歇|停刊|停用|停駐|停話|停靈|二停|居停|居中調停|三停|幹的停當|三停刀|停睇|停表|停車場|停雲慢步|停杯|停息|停學|停一停|停業|停留|不停當|停屍|停滯不前|停俸|停食|停柩|一停兒|停閑|停格|停工|停職|停雲|停潦|叫停|停頓|停版|停辛佇苦|停屍間|停電|四停八當|停閉|停訊|停罷|停眠整宿|停止|停戰|停待|停停|停住|停驂|留職停薪|晝夜停勻|手不停揮|窩停主人|放停|漲停|漲停板|消停|槃停|暫停|片刻不停|跌停板|調停|調停人|胸部停球|鸞停鵠峙|馬不停蹄|門不停賓|鸞鵠停峙|停屍房}}
 
 ===Descendants===
 {{CJKV||てい|정|đình}}
