--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -6,7 +6,7 @@
 * {{l|en|streight}} {{qualifier|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past participle of {{m|enm|strecchen|t=to stretch}}, from {{der|en|ang|streċċan}} (past participle {{m|ang|ġestreaht}}, {{m|ang|ġestreht}}), from {{der|en|gem-pro|*strakjaną}}, {{m|gem-pro|*strakkijaną|t=to stretch}}.
+From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past participle of {{m|enm|strecchen|t=to stretch}}, from {{der|en|ang|streċċan}} (past participle {{m|ang|ġestreaht}}, {{m|ang|ġestreht}}), from {{der|en|gem-pro|*strakjaną}}, {{m|gem-pro|*strakkijaną|t=to stretch}}. Doublet of {{l|en|straught}}.
 
 ===Pronunciation===
 * {{audio|en|en-us-straight.ogg|Audio (US)}}
