--- a/en/偃/偃.11089.wikitext
+++ b/en/偃/偃.11089.wikitext
@@ -31,7 +31,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# to [[fall]] on one's [[back]]; to [[lay down]]; to [[flop down]]
+# to [[fall]] on one's [[back]]; to [[lie down]]; to [[flop]] [[down]]
 # to [[desist]]; to [[cease]]; to [[stop]]
 
 ====Compounds====
