--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -136,9 +136,9 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kunigami: {{t|xug|清ーらせん|tr=すーらせん, sūrasen}}
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t+|ku|ئێسک سووک}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 * Laboya: {{t|lmy|jorro}}
+{{trans-mid}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
@@ -151,6 +151,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Manx: {{t|gv|aalin}}, {{t|gv|bwaagh}}, {{t|gv|bwoyagh}}
 * Maori: {{t|mi|waiwaiā }}, {{t|mi|pīwari }}, {{t|mi|hūmārie }}, {{t|mi|hūmārire }}, {{t|mi|purotu }}, {{t|mi|rerehua }}, {{t+|mi|tau }}, {{t|mi|ātanga }}, {{t|mi|ātaahua }}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
+* Middle English: {{t|enm|beautevous}}, {{t|enm|wynsom}}
 * Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
 * Navajo: {{t|nv|nizhóní}}, {{t|nv|nizhóní yeeʼ}}
 * Norman: {{t|nrf|bieau|m}}, {{t|nrf|belle|f}}
