--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -716,6 +716,9 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 #: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
 # {{lb|en|fashion}} A notch shaved into an eyebrow.
 # {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
+# {{lb|en|slang}} A hidden or secure place.
+#* {{quote-av|en|date=March 9, 2008|actor=|title={{w|The Wire}}|episode=[[w:-30-_(The_Wire)|-30-]]|season=5|number=10|time=|actor=Anwan Glover|role=Slim Charles|text=You don't mind me askin', why you want to sell? I mean, even from inside here, you can take a slice for just layin' in the '''cut'''.|writer={{w|David Simon}}|medium=television production|network=HBO}}
+#* {{quote-song|en|date=April 14, 2010|author={{w|Wiz Khalifa}}|authorlabel=no|title=In the '''Cut'''|url=https://genius.com/41741|album=Kush & Orange Juice|text=In the '''cut''', in the '''cut''', rolling doobies up}}
 
 ====Derived terms====
 {{der3|en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|final cut|fine cut|French cut|jump cut|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut}}
