--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -106,6 +106,9 @@ Alternatively, {{zh-ref|Ōta (2003)}} proposes that it is a grammaticalization o
 #* {{zh-x|你 乖 乖 地{dei6-2} 坐 喺度 喇 吓。|Sit here and behave, ok?|C}}
 #: {{zh-alt-inline|{{l|zh|的}}, {{l|zh|底}} ''obsolete''|c=1}}
 
+=====Synonyms=====
+* {{q|Xiang}} {{zh-l|里}}
+
 =====Usage notes=====
 * The use of this particle is always optional after polysyllabic adverbs.
 *: {{zh-x|非常 短|very short}}
