--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -9,7 +9,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug|jugo|south}} an
 
 ===Pronunciation===
 * {{IPA|en|/juːɡəˈslɑːvi.ə/}}
-{{rfap|en}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-Yugoslavia.wav|Audio (UK)}}
 
 ===Proper noun===
 {{en-proper noun}}
