--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -11,6 +11,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/blɒnd/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-blond.wav|Audio (UK)}}
 * {{a|GA}} {{IPA|en|/blɑnd/}}
 * {{rhymes|en|ɒnd}}
 
