t+fa:[[کندروس]] ([[WT:EDIT|Assisted]]) <spelt#59077229>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -62,6 +62,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Latin: {{t|la|ador|n}}
 * Luxembourgish: {{t|lb|Spelz|m}}
 * Norwegian: {{t|no|spelt}}
+* Persian: {{t|fa|کندروس|tr=kondorus}}
 * Polish: {{t|pl|pszenica orkisz|f}}
 * Portuguese: {{t+|pt|espelta|f}}
 * Romanian: {{t+|ro|alac|n}}
