/* Derived terms */ <catch#59081111>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -93,6 +93,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 ====Derived terms====
 {{der3|en|title=Terms derived from ''catch''
 |bycatch
+|catch a wave
 |catch fence
 |catchful
 |catch me
