--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -152,6 +152,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Khmer: {{t+|km|ឥដ្ឋ}}
 * Korean: {{t+|ko|벽돌}}
 * Koyraboro Senni: {{t|ses|feraw}}
+* Kumyk: {{t|kum|керпич}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|xişt|f}}, {{t+|ku|kerpîç|f}}
 *: Sorani: {{t+|ku|خشت}}
@@ -159,10 +160,10 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Ladin: {{t|lld|ziedl|m}} {{qualifier|Gardenese}}
 * Lao: {{t+|lo|ດິນຈີ່}}, {{t|lo|ອິດຖະ}}
 * Latin: {{t|la|later|m}}
+{{trans-mid}}
 * Latvian: {{t|lv|ķieģelis|m}}
 * Lezgi: {{t|lez|кирпич}}
 * Ligurian: {{t|lij|mun|m}}
-{{trans-mid}}
 * Limburgish: {{t+|li|brik|m}}, {{t+|li|brèk|m}}
 * Lingala: {{t|ln|biríki}}
 * Lithuanian: {{t|lt|plyta|f}}
