--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -24,8 +24,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 # To eject from any hollow place; to belch forth; to emit.
 #* {{quote-journal|en|year=2012|author=John Branch|title=Snow Fall: The Avalanche at Tunnel Creek| newspaper=New York Time| url=http://www.nytimes.com/projects/2012/snow-fall/?smid=fb-nytimes&WT.z_sma=SP_SNT_20130415#/?part=tunnel-creek}}
 #*: After about a minute, the creek bed '''vomited''' the debris into a gently sloped meadow. Saugstad felt the snow slow and tried to keep her hands in front of her.
-#* {{rfdatek|en|John Milton}}
-#*: Like the sons of Vulcan, '''vomit''' smoke.
+#* {{RQ:Milton Comuspassage=Like the sons of Vulcan, '''vomit''' smoke.}}
 #* {{rfdatek|en|Charlotte Brontë}}
 #*: a column of smoke, such as might be '''vomited''' by a park of artillery
 
