--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -59,7 +59,7 @@
 # to [[lend]]; to [[borrow]]; to [[loan]]
 #: {{zh-x|假道伐虢|to obtain safe passage to conquer the State of Guo}}
 #: {{zh-x|假以時日|as time goes by}}
-# {{lb|zh|archaic|politics}} [[acting]]
+# {{lb|zh|archaic|historical|politics}} [[acting]]
 #: {{zh-x|假-王|Acting Prince}}
 #: {{zh-x|假-丞相|Acting Chancellor}}
 # to [[make]] [[use]] of
