--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -164,7 +164,7 @@
 * Volapük: {{t+|vo|juüp}}
 * Welsh: {{t|cy|sgert|f}}, {{t|cy|sgertiau|f-p}}
 * Yami: {{t|tao|sikato}}
-* Yiddish: {{t|yi|ספּאָדניצע|f}}, {{t|yi|ספּודניצע|f}}
+* Yiddish: {{t|yi|ספּאָדניצע|f}}, {{t|yi|ספּודניצע|f}}, {{t|yi|יופּע|f}}
 * Zazaki: {{t|zza|eteg}}
 {{trans-bottom}}
 
