--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -44,8 +44,7 @@
 #: {{syn|en|hock|hough|hox}}
 # {{lb|en|transitive|figurative}} To [[cripple]]; to [[incapacitate]]; to [[disable]]. {{defdate|from 1640s}}
 #: {{syn|en|cripple|incapacitate|disable}}
-#* {{rfdatek|en|John Milton}}
-#*: So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home.
+#* {{RQ:Milton Reformation|passage=So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home.}}
 
 ====Hypernyms====
 * See [[Thesaurus:disable]]
