--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -26,7 +26,7 @@
 |m-s=ngang2
 |c=ngong4,ngong5
 |c_note=ngong5 - variant
-|h=gd=ngong1
+|h=pfs=ngòng;gd=ngong1
 |mn=xm,qz,tw:gông/zz:gâng
 |mn-t=ngang1
 |mc=y
