--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -28,8 +28,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ## To [[form]] or [[shape]] by cutting.
 ##: {{ux|en|I have three diamonds to '''cut''' today.}}
 ##* {{RQ:Shakespeare Merchant of Venice|act=I|scene=i|passage=Why should a man, whose blood is warm within, / Sit like his grandsire '''cut''' in alabaster}}
-##* {{rfdatek|en|John Milton}}
-##*: loopholes '''cut''' through thickest shade
+##* {{RQ:Milton PL|book=8|passage=loopholes '''cut''' through thickest shade}}
 ## {{lb|en|slang}} To [[wound]] with a knife.
 ##* '''1990''', {{w|Stephen Dobyns}}, ''The house on Alexandrine''
 ##*: We don't want your money no more. We just going to '''cut''' you.
