--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -29,7 +29,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 |c-t=
 |g=
 |h=pfs=cho
-|j=
+|j=zueh4
 |md=có̤
 |mda=Cdo-fzho 做.ogg
 |mn=xm,qz,lk,tp,km,mg,hc:chòe/ml,yl,tn,kh,tc:chò/sx:chère
