--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -716,7 +716,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # {{lb|en|fashion}} A notch shaved into an eyebrow.
 # {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
 # {{lb|en|slang}} A hidden or secure place.
-#* {{quote-av|en|date=March 9, 2008|actor=|title={{w|The Wire}}|episode=[[w:-30-_(The_Wire)|-30-]]|season=5|number=10|time=|actor=Anwan Glover|role=Slim Charles|text=You don't mind me askin', why you want to sell? I mean, even from inside here, you can take a slice for just layin' in the '''cut'''.|writer={{w|David Simon}}|medium=television production|network=HBO}}
+#* {{quote-av|en|date=March 9, 2008|title={{w|The Wire}}|episode=[[w:-30-_(The_Wire)|-30-]]|season=5|number=10|time=|actor=Anwan Glover|role=Slim Charles|text=You don't mind me askin', why you want to sell? I mean, even from inside here, you can take a slice for just layin' in the '''cut'''.|writer={{w|David Simon}}|medium=television production|network=HBO}}
 #* {{quote-song|en|date=April 14, 2010|author={{w|Wiz Khalifa}}|authorlabel=no|title=In the '''Cut'''|url=https://genius.com/41741|album=Kush & Orange Juice|text=In the '''cut''', in the '''cut''', rolling doobies up}}
 
 ====Derived terms====
