--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -16,6 +16,7 @@
 ===Pronunciation 1===
 {{zh-pron
 |m=圳
+|m_note=Taiwan pronunciation used except for [[深圳]]
 |c=zan3
 |h=pfs=chun
 |md=
@@ -29,6 +30,7 @@
 {{zh-hanzi}}
 
 # [[furrow]] in a [[field]], small [[drainage]] in a field
+
 ====Compounds====
 {{zh-der|圳溝|嘉南大圳|深圳|水圳}}
 
