/* Noun */  OSI model <bridge#59148601>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -54,7 +54,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 ## {{lb|en|programming}} A [[software]] [[component]] connecting two or more separate systems.
 ##* '''2011''', Thord Daniel Hedengren, ''Smashing WordPress Themes: Making WordPress Beautiful''
 ##*: The plugin also acts as a '''bridge''' with BuddyPress and adds things like the top admin bar, and so on.
-## {{lb|en|networking}} A system which connects two or more [[LAN|local area networks]] at layer 2.
+## {{lb|en|networking}} A system which connects two or more [[LAN|local area networks]] at layer 2 of [[OSI]] model.
 ##: {{ux|en|The LAN '''bridge''' uses a spanning tree algorithm.}}
 ## {{lb|en|chemistry}} An [[intramolecular]] [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
 ## {{lb|en|electronics}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
