--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -263,6 +263,9 @@ From {{der|nl|la|curvus|t=bent, curved}}.
 |aanbodcurve
 |vraagcurve}}
 
+====Descendants====
+* {{desc|id|bor=1|kurva}}
+
 ----
 
 ==Italian==
