--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -173,8 +173,7 @@ Borrowed from {{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}. Cognate 
 
 # To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
 # To form by melting a metal and pouring it into a mould; to [[cast]].
-#* {{rfdatek|en|John Milton}}
-#*: Whereof to '''found''' their engines.
+#* {{RQ:Milton PL|book=6|passage=Whereof to '''found''' their engines.}}
 
 =====Related terms=====
 * {{l|en|foundry}}
