--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -281,8 +281,7 @@
 #*: An enormous man and woman (it was early-closing day) were stretched motionless, with their heads on pocket-handkerchiefs, side by side, within a few feet of the sea, while two or three gulls gracefully '''skirted''' the incoming waves, and settled near their boots.
 #* {{quote-journal|en|date=2013-06-01|volume=407|issue=8838| page=13 (Technology Quarterly)| magazine={{w|The Economist}}| title=[http://www.economist.com/news/technology-quarterly/21578516-transport-new-train-technologies-are-less-visible-and-spread-less-quickly Ideas coming down the track]| passage=A “moving platform” scheme{{...}}is more technologically ambitious than maglev trains even though it relies on conventional rails. Local trains would use side-by-side rails to roll alongside intercity trains and allow passengers to switch trains by stepping through docking bays. [&hellip;] This would also let high-speed trains '''skirt''' cities as moving platforms ferry passengers to and from the city centre.}}
 # To cover with a skirt; to surround.
-#* {{rfdatek|en|John Milton}}
-#*: '''skirted''' his loins and thighs with downy gold
+#* {{RQ:Milton PL|5|passage='''skirted''' his loins and thighs with downy gold}}
 # To avoid or ignore (something); to manage to avoid (something or a problem); to [[skate by]] (something).
 #: ''He '''skirted''' the issue of which parties to attend by staying at home instead.''
 
