--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -20,6 +20,7 @@
 |m=hàn
 |c=hon5
 |h=pfs=hôn
+|j=han3
 |md=âng
 |mn=qz:ǒaⁿ/tw,xm,zz:ōaⁿ/tw,xm,zz:hōaⁿ/hān
 |mn_note=ǒaⁿ/ōaⁿ/hōaⁿ - vernacular; hān - literary
