--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -107,6 +107,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Malin Bridge
 |Maryland bridge
 |Menai Bridge
+|Mylor Bridge
 |Newby Bridge
 |Norton Bridge
 |[[Roybridge]], [[Roy Bridge]]
