--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -284,6 +284,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Turkish: {{t+|tr|konuşmak}}
 * Turkmen: {{t|tk|gürlemek}}, {{t|tk|geplemek}}, {{t|tk|sözlemek}}
 * Tuvan: {{t|tyv|чугаалаар}}
+* Ugaritic: {{t|uga|𐎄𐎁𐎗}}
 * Ukrainian: {{t+|uk|говори́ти|impf}}, {{t|uk|сказа́ти|pf}}; {{t+|uk|розмовля́ти|impf}},
 * Urdu: {{t|ur|بولنا|tr=bolnā}}
 * Uyghur: {{t|ug|سۆزلىمەك|sc=ug-Arab}}, {{t|ug|ئېيتماق|sc=ug-Arab}}
