--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -404,8 +404,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 #*: O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.
 #* {{rfdatek|en|L'Estrange}}
 #*: The lion began to show his teeth, and to '''stomach''' the affront.
-#* {{rfdatek|en|John Milton}}
-#*: The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.
+#* {{RQ:Milton Eikon|passage=The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.}}
 # {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]].
 
 ====Synonyms====
