--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -69,6 +69,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 #: {{zh-x|老師 早！|'''Good morning''', teacher!}}
 # [[before]]; in the [[past]] time
 #* {{zh-x|現在 這麼 匆忙，你 早 幹{gàn}嗎{má} 去 了。|So now you are in a hurry. What were you doing before?}}
+# {{lb|zh|Hainanese}} [[breakfast]]
 
 ====Synonyms====
 {{zh-dial|早安}}
