t+cs:[[přeříznout]] ([[WT:EDIT|Assisted]]) <cut#59177771>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -313,6 +313,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 *: Cantonese: {{t|yue|切|tr=cit3}}
 *: Mandarin: {{t+|cmn|切|tr=qiē}}
 *: Min Nan: {{t|nan|kā}}
+* Czech: {{t|cs|přeříznout|pf}}
 * Dalmatian: {{t|dlm|taljur}}
 * Danish: {{t|da|udskære}}
 * Dutch: {{t+|nl|snijden}}
