--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -25,6 +25,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 # {{lb|en|historical}} An ancient [[kingdom]] that occupied roughly the same area in ancient times.
 # {{lb|en|historical}} An ancient [[kingdom]] that occupied the northern part of this area, as distinct from [[Judah]].
 # The [[Jew]]s, taken collectively.
+#* {{quote-text|en|2018|author=John F. MacArthur|title=Good News: The Gospel of Jesus Christ|passage=In spite of three years of abundant proof of His divine nature, '''Israel''' sided against the Lord Jesus with His enemies.}}
 # {{given name|en|male|from=Hebrew}}, notably borne by [[Jacob]] (after Genesis 32:28).
 #* {{RQ:Authorized Version|Genesis|32|28}}
 #*: And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.
