--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -291,6 +291,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Mohawk: {{t|moh|owistóhseraʼ}}
 * Mongolian: {{t|mn|цөцгийн тос}}, {{t+|mn|масло}}
 * Navajo: {{t|nv|mandagíiya}}
+* Neapolitan: {{t|nap|butirro}}
 * Nepali: {{t|ne|नौनी}}, {{t|ne|मक्खन}}
 * Norman: {{t|nrf|beurre|m}} {{qualifier|Jersey}}, {{t|nrf|burre|m}} {{qualifier|Guernsey}}, {{t|nrf|buure|m}} {{qualifier|continental Norman}}, {{t|nrf|bür|m}} {{qualifier|Sark}}
 * North Frisian: {{t|frr|bööder}}
