--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -58,8 +58,16 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 
 ====Translations====
 {{trans-top|matter}}
+* Albanian: {{t+|sq|substancë|f}}
+* Arabic: {{t+|ar|مَادَّة|f}}
 * Armenian: {{t+|hy|նյութ}}
 * Asturian: {{t|ast|sustancia|f}}
+* Azerbaijani: {{t+|az|maddə}}
+* Bashkir: {{t|ba|матдә}}
+* Belarusian: {{t+|be|рэ́чыва|n}}
+* Bengali: {{t+|bn|পদার্থ}}
+* Bulgarian: {{t+|bg|вещество́|n}}
+* Burmese: {{t+|my|ဒြပ်}}
 * Catalan: {{t+|ca|substància|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|物質}}, {{t+|cmn|物质|tr=wùzhì}}
@@ -67,6 +75,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Danish: {{t|da|substans}}, {{t+|da|masse}}
 * Dutch: {{t+|nl|substantie|f}}
 * Esperanto: {{t|eo|substanco}}
+* Estonian: {{t+|et|aine}}
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
 * Galician: {{t+|gl|substancia|f}}
@@ -76,25 +85,42 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Hebrew: {{t+|he|חומר|m|tr=khómer}}
 * Hindi: {{t+|hi|पदार्थ|m}}|tr=padārth
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
-{{trans-mid}}
 * Irish: {{t|ga|mianach|m}}, {{t|ga|damhna|m}}
 * Italian: {{t+|it|sostanza|f}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
+* Kazakh: {{t+|kk|зат}}
 * Khmer: {{t+|km|វត្ថុ|tr=voattʰo’}}
+{{trans-mid}}
 * Korean: {{t+|ko|물질}}
+* Kyrgyz: {{t+|ky|зат}}
 * Latin: {{t|la|substantia|f}}, {{t+|la|materia|f}}
 * Latvian: {{t|lv|viela|f}}
+* Lithuanian: {{t+|lt|medžiaga|f}}
+* Macedonian: {{t|mk|супстанција|f}}
 * Maori: {{t|mi|matū}}, {{t|mi|pūmatū}}, {{t|mi|kiko}}
 * Norwegian: {{t|no|substans|m}}, {{t+|no|masse|m}}
+* Persian: {{t+|fa|ماده|tr=mâdde}}
 * Polish: {{t+|pl|substancja|f}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t+|ro|substanță|f}}
 * Russian: {{t+|ru|вещество́|n}}, {{t+|ru|субста́нция|f}}, {{t+|ru|мате́рия|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|супста̀нца|f}}
+*: Roman: {{t|sh|supstànca|f}}
+* Slovak: {{t|sk|látka|f}}
+* Slovene: {{t+|sl|snov|f}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|ämne|n}}, {{t+|sv|substans|c}}
+* Tajik: {{t|tg|модда}}
+* Tatar: {{t+|tt|матдә}}
 * Telugu: {{t+|te|పదార్థము}}|tr=padaarthamu
 * Thai: {{t+|th|สสาร}}
 * Turkish: {{t+|tr|madde}}
+* Turkmen: {{t|tk|madda}}
+* Ukrainian: {{t+|uk|речовина́|f}}
+* Uyghur: {{t|ug|ماددا}}
+* Uzbek: {{t+|uz|modda}}
+* Vietnamese: {{t+|vi|vật chất}}
 {{trans-bottom}}
 
 {{trans-top|essential part}}
