t+ka:[[ნივთიერება]] t-balance t+is:[[efni]] ([[WT:EDIT|Assisted]]) <substance#59183926>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -82,18 +82,20 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
 * Galician: {{t+|gl|substancia|f}}
+* Georgian: {{t|ka|ნივთიერება}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
 * Greek: {{t+|el|ουσία|f}}
 *: Ancient: {{t|grc|οὐσία|f}}, {{t|grc|ὕλη|f}}, {{t|grc|ὑπόστασις|f}}
 * Hebrew: {{t+|he|חומר|m|tr=khómer|alt=חומר \ חֹמֶר}}
 * Hindi: {{t+|hi|पदार्थ|m}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
+* Icelandic: {{t+|is|efni|n}}
 * Irish: {{t|ga|mianach|m}}, {{t|ga|damhna|m}}
 * Italian: {{t+|it|sostanza|f}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
 * Kazakh: {{t+|kk|зат}}
-* Khmer: {{t+|km|វត្ថុ}}
 {{trans-mid}}
+* Khmer: {{t+|km|វត្ថុ}}
 * Korean: {{t+|ko|물질}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|made}}
